# Attendance-System

./: CMakeLists.txt  README.md  main.cpp
include/: Attendance.h  Employee.h  Report.h
src/: Attendance.cpp  Employee.cpp  Report.cpp
tests/: test_attendance.cpp
